--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div id="buttonholder">
-            <button type="submit" class="submitbutton">Login</button>
+            <button type="submit" class="submitbutton">Log In</button>
             <h4>Or</h4>
             <button type="submit" class="loginbutton">Sign Up</button>
         </div>
