--- a/login.html
+++ b/login.html
@@ -30,12 +30,12 @@
             </div>
         </div>
         <div id="buttonholder">
-            <button type="submit" class="submitbutton">Log In</button>
+            <button type="submit" class="loginbutton">Log In</button>
             <h4>Or</h4>
-            <button type="submit" class="loginbutton">Sign Up</button>
+            <button type="submit" class="signupbutton">Sign Up</button>
         </div>
 
     </div>
-
+    <script src="scriptLogin.js"></script>
 </body>
 </html>
