--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
         <div id="buttonholder">
             <button type="submit" class="loginbutton">Log In</button>
             <h4>Or</h4>
-            <button type="submit" class="signupbutton">Sign Up</button>
+            <a href="signup.html"><button type="submit" class="signupbutton">Sign Up</button></a>
         </div>
 
     </div>
