--- a/signup.html
+++ b/signup.html
@@ -39,7 +39,7 @@
         <div id="buttonholder">
             <button type="submit" class="signupbutton">Sign Up</button>
             <h4>Or</h4>
-            <button type="submit" class="loginbutton">Log In</button>
+            <a href="login.html"><button type="submit" class="loginbutton">Log In</button></a>
         </div>
 
     </div>
