--- a/form.html
+++ b/form.html
@@ -21,11 +21,11 @@
                 </div>
                 <div class="detailsbox">
                     <label for="informerphone">Phone</label>
-                    <input type="text" id="informerphone" placeholder="Phone" class="inputclass" required>                
+                    <input type="tel" id="informerphone" placeholder="Phone" class="inputclass" required>                
                 </div>
                 <div class="detailsbox">
                     <label for="informeremail">Email</label>
-                    <input type="text" id="informeremail" placeholder="Email" class="inputclass" required>                
+                    <input type="email" id="informeremail" placeholder="Email" class="inputclass" required>                
                 </div>
                 <div class="detailsbox">
                     <label for="informeraddress">Address</label>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="detailsbox">
                     <label for="stationphone">Phone</label>
-                    <input type="text" id="stationphone" placeholder="Station Phone" class="inputclass" required>
+                    <input type="tel" id="stationphone" placeholder="Station Phone" class="inputclass" required>
                 </div> 
             </div>
         </div>
