--- a/dashboard.html
+++ b/dashboard.html
@@ -15,26 +15,11 @@
                     <input type="text" id="searchbar" placeholder="Search">
                 </div>
                 <div id="profile">
-                    <img src="profile.png" alt="Profile Picture" id="profilepic" onclick="togglemenu()">
-                    <div class="sub-menu-drop_down" id="subMenu">
-                        <div class="sub-menu">
-                            <div class="userinfo">
-                                <img src="profile.png">
-                                <h2>Gurneesh</h2>
-                            </div>
-                            <hr>
-                            <a href="#" class="sub-menu-link">
-                                <p>Designation</p>
-                            </a>
-                            <a href="#" class="sub-menu-link">
-                                <p>Number of cases filed:</p>
-                            </a>
-                            <a href="#" class="sub-menu-link">
-                                <p>Log out</p>
-                            </a>
-                        </div>
-                    </div>
+                    <P>G</P>
                 </div>
+            </div>
+            <div id="dropdown">
+                
             </div>
             <div id="newandrecent">
                 <buttom id="newfirbutton">New</buttom>
