--- a/dashboard.html
+++ b/dashboard.html
@@ -19,7 +19,15 @@
                 </div>
             </div>
             <div id="dropdown">
-                
+                <div id="profilelarge">
+                    <P>G</P>
+                </div>
+                <div id="borderforname">
+                    <h2>Gurnish</h2>
+                </div>
+                <p>gurnish@gmail.com</p>
+                <p id="numberofcases">Cases Filed:100</p>
+                <button id="logoutbutton">Logout</button>
             </div>
             <div id="newandrecent">
                 <buttom id="newfirbutton">New</buttom>
