Some minor styling in background

--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form id="main">
-        <h1>First Information Report</h1>
+        <h1>First Investigation Report</h1>
         <div id="informerdetails" class="outerdetailsbox">
             <h2>Informer Details</h2>
             <div class="innerdetailsbox">
