--- a/login.html
+++ b/login.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log In</title>
-    <link rel="stylesheet" href="styleLogin.css">
-    <script src="https://kit.fontawesome.com/1a9bd7d779.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <div id="main">
-        <h1>Login</h1>
-        <div id="loginform">
-            <div class="inputbox" id="userbox">
-                <label for="username">Username</label>
-                <div class="inputwicon">
-                    <i class="fa-regular fa-user"></i>
-                    <input name="username" type="username" class="inputclass" placeholder="Username" required>
-                </div>
-            </div>
-            <div id="inputwforgot">
-                <div class="inputbox" id="passbox">
-                    <label for="password">Password</label>
-                    <div class="inputwicon">
-                        <i class="fa-solid fa-lock"></i>
-                        <input name="password" type="password" class="inputclass" placeholder="Password" required>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Login</title>
+        <link rel="stylesheet" href="styleLogin.css">
+    </head>
+    <body>
+        <class class="whole-body">
+            <class class="main-form">
+                <form>
+                    <h2>LOGIN</h2>
+                    <div class="user-id">
+                        <!-- <span class="icon"></span> -->
+                        <label for="user-id-input">User ID</label>
+                        <input type="text" class="user-id-input" required >
                     </div>
-                </div>
-                <a href="#" id="forgot">Forgot Password?</a>
-            </div>
-        </div>
-        <div id="buttonholder">
-            <button type="submit" class="loginbutton">Log In</button>
-            <h4>Or</h4>
-            <a href="signup.html"><button type="submit" class="signupbutton">Sign Up</button></a>
-        </div>
-
-    </div>
-    <script src="scriptLogin.js"></script>
-</body>
+                    <div class="password">
+                        <!-- <span class="icon"></span> -->
+                        <label for="password-input">Password</label>
+                        <input type="password" class="password-input" required>
+                    </div>
+                    <div class="rem-forgot">
+                        <label>
+                            <input type="checkbox">
+                            Remember me
+                        </label>
+                    </div>
+                    <button type="button">Login</button>
+                    <h4>or</h4>
+                    <div class="register">
+                        <a href="#">Register</a>
+                    </div>
+                </form>
+            </class>
+        </class>
+    </body>
 </html>
